[package]
name = "lightroom-api"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kazuki/lightroom-api"
license = "MIT"
categories = ["api-bindings"]
keywords = ["lightroom", "http", "api", "restful" "rest"]
description = "Adobe Lightroom HTTP RESTful API bindings"
readme = "README.md"

[dependencies]
